--- a/index.html
+++ b/index.html
@@ -19,67 +19,55 @@
     <link href="https://fonts.googleapis.com/css2?family=Amiri&family=Cinzel:wght@400;700&family=Scheherazade+New:wght@400;700&display=swap" rel="stylesheet">
 
 <style>
-    /* 1. GLOBAL FIXES: Background, Side Gap, No Flashing, Safe Area */
+    /* 1. THE BATTERY/CLOCK FIX: Pushes everything down so it never overlaps the top icons */
+    header, .header-container, #root > div > div:first-child {
+        padding-top: env(safe-area-inset-top) !important;
+        background-color: #030e26 !important;
+        position: relative !important;
+    }
+
+    /* 2. REMOVE SETTINGS BUTTON FROM HOME SCREEN ONLY */
+    /* This finds the settings gear on the first page and hides it completely */
+    #root > div > div:first-child header button:last-child,
+    #root > div > div:first-child .settings-icon,
+    #root > div > div:first-child svg[class*="gear"] {
+        display: none !important;
+        visibility: hidden !important;
+    }
+
+    /* 3. KEEP SETTINGS BUTTON ON INSIDE PAGES */
+    /* This ensures it stays visible when you are reading a Dua */
+    header button:last-child {
+        display: block;
+    }
+
+    /* 4. THE LOGO: Stays on one line ("QALB-E-DUA") */
+    .font-heading { 
+        font-family: 'Cinzel', serif; 
+        white-space: nowrap !important;
+        font-size: 22px !important;
+        line-height: 1.2 !important;
+        text-align: center !important;
+    }
+
+    /* 5. STOP BLUE FLASHING AND HIDE SCROLLBAR */
+    * {
+        -webkit-tap-highlight-color: transparent !important;
+        outline: none !important;
+    }
+    
+    ::-webkit-scrollbar { display: none !important; }
+
+    /* 6. GAP FIX: No white top gap or side gap */
     html, body {
         margin: 0;
         padding: 0;
         background-color: #030e26 !important;
         overscroll-behavior-y: none !important;
-        width: 100%;
         overflow-x: hidden;
     }
 
-    body {
-        padding-top: env(safe-area-inset-top);
-    }
-
-    * {
-        -webkit-tap-highlight-color: transparent !important;
-        outline: none !important;
-    }
-
-    ::-webkit-scrollbar { display: none !important; }
-
-    /* 2. THE LOGO: Forces "QALB-E-DUA" to stay on one line */
-    .font-heading { 
-        font-family: 'Cinzel', serif; 
-        white-space: nowrap !important;
-        font-size: 20px !important;
-        line-height: 1.2 !important;
-        text-align: center !important;
-    }
-
-    /* 3. SETTINGS BUTTON LOGIC */
-
-    /* FIRST: Hide the Settings button on ALL pages */
-    header button:last-child, 
-    .header-container button:last-child,
-    .settings-icon {
-        display: none !important;
-    }
-
-    /* SECOND: Show the Settings button ONLY on the Home Screen */
-    /* This targets the main menu screen specifically */
-    #root > div > div:first-child header button:last-child,
-    #root > div > div:first-child .header-container button:last-child,
-    #root > div > div:first-child button:has(svg:last-child) {
-        display: block !important;
-        position: absolute !important;
-        right: 15px !important;
-        top: 50% !important;
-        transform: translateY(-50%) !important;
-    }
-
-    /* 4. PREVENT OVERLAP WITH CLOCK */
-    header, .header-container {
-        position: relative !important;
-        min-height: 60px !important;
-        display: flex !important;
-        align-items: center !important;
-        justify-content: center !important;
-    }
-
-    /* 5. ORIGINAL STYLES */
+    /* 7. YOUR ORIGINAL STYLES */
     .font-arabic { font-family: 'Scheherazade New', serif; line-height: 2.3; }
     .no-scrollbar::-webkit-scrollbar { display: none; }
     .animate-in { animation: fadeIn 0.4s ease-out; }
