--- a/index.html
+++ b/index.html
@@ -19,54 +19,74 @@
     <link href="https://fonts.googleapis.com/css2?family=Amiri&family=Cinzel:wght@400;700&family=Scheherazade+New:wght@400;700&display=swap" rel="stylesheet">
 
 <style>
-    /* 1. STOPS THE BLUE LIGHT FLASH WHEN YOU PRESS BUTTONS */
-    * {
-        -webkit-tap-highlight-color: transparent !important;
-        outline: none !important;
-    }
-
-    /* 2. REMOVES THE SCROLLBAR LINE ON ALL DEVICES */
-    *::-webkit-scrollbar {
-        display: none !important;
-        width: 0 !important;
-        height: 0 !important;
-    }
-
-    /* 3. KEEPS YOUR TOP GAP FIX & SIDE GAP FIX */
-    html, body { 
-        overscroll-behavior-y: none !important; 
-        background-color: #030e26 !important; 
-        margin: 0; 
+    /* 1. VISUAL FIXES: Background, No Side Gap, No Blue Flash, No Scrollbar */
+    html, body {
+        margin: 0;
         padding: 0;
+        background-color: #030e26 !important;
+        overscroll-behavior-y: none !important;
         width: 100%;
-        overflow-x: hidden;
+        /* Note: We don't put overflow: hidden on body so sticky works */
+    }
+    #root {
+        overflow-x: hidden !important;
+        width: 100%;
+    }
+    * { -webkit-tap-highlight-color: transparent !important; outline: none !important; }
+    ::-webkit-scrollbar { display: none !important; }
+
+    /* 2. THE STICKY FIX: Keeps the Header and the Index at the top */
+    header, .header-container, #root > div > div:first-child header {
+        position: -webkit-sticky !important;
+        position: sticky !important;
+        top: 0 !important;
+        z-index: 1000 !important;
+        background-color: #030e26 !important;
+        padding-top: env(safe-area-inset-top) !important;
     }
 
-    body { 
-        padding-top: env(safe-area-inset-top); 
+    /* Target the Index menu (1. Dua For, 2. Dua For...) to stay at the top */
+    .flex.overflow-x-auto, nav.flex {
+        position: -webkit-sticky !important;
+        position: sticky !important;
+        top: 55px !important; /* Adjust if needed to sit below the title */
+        z-index: 999 !important;
+        background-color: #030e26 !important;
+        padding: 10px 0 !important;
     }
 
-    /* 4. THE LOGO: Forces "QALB-E-DUA" to stay on one line on Home Screen */
+    /* 3. SETTINGS BUTTON: Remove from Home Screen, keep on inside pages */
+    #root > div > div:first-child header button:last-child,
+    #root > div > div:first-child .header-container button:last-child {
+        display: none !important;
+    }
+    header button:last-child { display: block; }
+
+    /* 4. TITLE FIXES: Logo vs Page Titles */
+    .font-heading { 
+        font-family: 'Cinzel', serif; 
+        text-align: center;
+        line-height: 1.2 !important;
+    }
+
+    /* HOME LOGO: Forces "QALB-E-DUA" on one line */
     #root > div > div:first-child .font-heading {
         white-space: nowrap !important;
         font-size: 22px !important;
     }
 
-    /* 5. REMOVE SETTINGS BUTTON FROM HOME SCREEN ONLY */
-    /* This targets the gear icon ONLY on the main menu page */
-    #root > div > div:first-child header button:last-child,
-    #root > div > div:first-child .settings-icon {
-        display: none !important;
+    /* INTERNAL TITLES: ALLOWS wrapping to 2 lines so they are NEVER cut off */
+    /* Fixes "PRAYERS AFTER SALAH" being full and not cut off with "..." */
+    header .font-heading, .header-container .font-heading {
+        white-space: normal !important;
+        overflow: visible !important;
+        text-overflow: unset !important;
+        font-size: 18px !important;
+        max-width: 80% !important;
+        margin: 0 auto !important;
     }
 
-    /* 6. KEEP SETTINGS BUTTON ON INSIDE PAGES */
-    /* This ensures it remains visible when you are reading a Dua */
-    header button:last-child {
-        display: block;
-    }
-
-    /* 7. YOUR ORIGINAL STYLES (NO CHANGES) */
-    .font-heading { font-family: 'Cinzel', serif; text-align: center; line-height: 1.2; }
+    /* 5. ORIGINAL STYLES */
     .font-arabic { font-family: 'Scheherazade New', serif; line-height: 2.3; }
     .no-scrollbar::-webkit-scrollbar { display: none; }
     .animate-in { animation: fadeIn 0.4s ease-out; }
