--- a/index.html
+++ b/index.html
@@ -18,83 +18,65 @@
     
     <link href="https://fonts.googleapis.com/css2?family=Amiri&family=Cinzel:wght@400;700&family=Scheherazade+New:wght@400;700&display=swap" rel="stylesheet">
 
-<style>
-    /* 1. BACKGROUND & GAP FIXES */
-    html {
-        /* This stops the white pull-down gap at the browser level */
-        background-color: #030e26 !important;
-        overscroll-behavior: none !important;
-    }
 
-    body {
+<style>
+    /* 1. LOCK SCREEN & BACKGROUND: No white gap, no side gap */
+    html, body {
+        width: 100%;
         margin: 0;
         padding: 0;
+        overscroll-behavior-y: none !important; 
         background-color: #030e26 !important;
-        /* Stops the side-to-side gap without breaking the sticky menu */
-        overflow-x: clip !important;
-        width: 100%;
+        /* We remove 'overflow: hidden' here so 'sticky' actually works */
     }
 
-    /* 2. STICKY HEADER & INDEX FIX */
-    /* This forces the Title and the horizontal Buttons to stay at the top while scrolling */
-    
+    /* 2. STICKY HEADER & INDEX: This keeps them at the top when you scroll */
     header, .header-container, #root > div > div:first-child {
         position: -webkit-sticky !important;
         position: sticky !important;
         top: 0 !important;
-        z-index: 2000 !important;
+        z-index: 1000 !important;
         background-color: #030e26 !important;
         padding-top: env(safe-area-inset-top) !important;
         padding-bottom: 5px !important;
     }
 
-    /* This targets the Index buttons (1. Dua For, 2. Dua For...) */
+    /* THIS IS THE INDEX FIX: It makes the buttons stay at the top 
+       so you can see them the moment you scroll back up */
     .flex.overflow-x-auto, nav.flex, [class*="overflow-x-auto"] {
         position: -webkit-sticky !important;
         position: sticky !important;
-        /* This sits right below the header title */
-        top: 55px !important; 
-        z-index: 1999 !important;
+        top: 60px !important; /* Adjust this if your title is taller */
+        z-index: 999 !important;
         background-color: #030e26 !important;
-        padding: 10px 0 !important;
+        padding-top: 10px !important;
+        padding-bottom: 10px !important;
         border-bottom: 1px solid rgba(255,255,255,0.1);
     }
 
-    /* 3. TITLE FIX: Stop cutting off names with "..." */
-    .font-heading { 
-        font-family: 'Cinzel', serif; 
-        line-height: 1.2 !important;
-        text-align: center !important;
-    }
-
-    /* Target ONLY the main "QALB-E-DUA" logo to stay on one line */
-    #root > div > div:first-child .font-heading {
-        white-space: nowrap !important;
-        font-size: 22px !important;
-    }
-
-    /* Target Page Titles (PRAYERS OF THE PROPHET, etc.) to show FULL text */
-    header .font-heading, .title-container .font-heading {
-        white-space: normal !important;   /* Allows text to wrap to 2 lines */
-        overflow: visible !important;
-        text-overflow: unset !important;
-        font-size: 16px !important;       /* Smaller so it fits between icons */
-        max-width: 80% !important;
-        margin: 0 auto !important;
-        display: block !important;
-    }
-
-    /* 4. STOP BLUE FLASHING ON BUTTONS */
+    /* 3. STOP BLUE FLASHING ON BUTTONS */
     * {
         -webkit-tap-highlight-color: transparent !important;
         outline: none !important;
     }
 
-    /* 5. HIDE SCROLLBARS */
-    ::-webkit-scrollbar { display: none !important; width: 0 !important; }
+    /* 4. HIDE SCROLLBAR LINE (AERO) */
+    ::-webkit-scrollbar { display: none !important; }
     * { scrollbar-width: none !important; }
 
-    /* 6. ORIGINAL STYLES */
+    /* 5. TITLE LOOK: One line, cuts off with "..." (To keep layout clean) */
+    .font-heading { 
+        font-family: 'Cinzel', serif; 
+        line-height: 1.2 !important;
+        white-space: nowrap !important;     
+        overflow: hidden !important;        
+        text-overflow: ellipsis !important;   
+        font-size: 20px !important;         
+        text-align: center !important;
+        display: block !important;
+    }
+
+    /* 6. YOUR ORIGINAL STYLES */
     .font-arabic { font-family: 'Scheherazade New', serif; line-height: 2.3; }
     .no-scrollbar::-webkit-scrollbar { display: none; }
     .animate-in { animation: fadeIn 0.4s ease-out; }
