--- a/index.html
+++ b/index.html
@@ -19,56 +19,146 @@
     <link href="https://fonts.googleapis.com/css2?family=Amiri&family=Cinzel:wght@400;700&family=Scheherazade+New:wght@400;700&display=swap" rel="stylesheet">
 
 <style>
-    /* 1. ONLY TARGET THE MAIN LOGO (QALB-E-DUA) */
-    /* This makes it fit on one line without breaking any other page titles */
-    .font-heading { 
-        font-family: 'Cinzel', serif; 
+    /* 1. LOCK SCREEN & BACKGROUND: No white gap, no side gap */
+    html, body {
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        overscroll-behavior-y: none !important; 
+        background-color: #030e26 !important;
+        /* We remove 'overflow: hidden' here so 'sticky' actually works */
     }
 
-    /* Target the top title specifically - using a safe size that fits all phones */
-    #root > div > div > .font-heading:first-child, 
-    #root > div > header .font-heading {
-        white-space: nowrap !important;
-        font-size: clamp(18px, 6.5vw, 24px) !important;
-        display: block;
-        text-align: center;
+    /* 2. STICKY HEADER & INDEX: This keeps them at the top when you scroll */
+    header, .header-container, #root > div > div:first-child {
+        position: -webkit-sticky !important;
+        position: sticky !important;
+        top: 0 !important;
+        z-index: 1000 !important;
+        background-color: #030e26 !important;
+        padding-top: env(safe-area-inset-top) !important;
+        padding-bottom: 5px !important;
     }
 
-    /* 2. ENSURE INTERNAL PAGE TITLES DON'T CUT OFF */
-    /* This lets long titles like "Visiting Graves" wrap to two lines naturally */
-    header .font-heading, nav .font-heading {
-        white-space: normal !important;
-        line-height: 1.2 !important;
-        font-size: 1.25rem !important; /* Keep original size for sub-pages */
+    /* THIS IS THE INDEX FIX: It makes the buttons stay at the top 
+       so you can see them the moment you scroll back up */
+    .flex.overflow-x-auto, nav.flex, [class*="overflow-x-auto"] {
+        position: -webkit-sticky !important;
+        position: sticky !important;
+        top: 60px !important; /* Adjust this if your title is taller */
+        z-index: 999 !important;
+        background-color: #030e26 !important;
+        padding-top: 10px !important;
+        padding-bottom: 10px !important;
+        border-bottom: 1px solid rgba(255,255,255,0.1);
     }
 
-    /* 3. STOPS THE BLUE FLASHING WHEN PRESSING BUTTONS */
+    /* 3. STOP BLUE FLASHING ON BUTTONS */
     * {
         -webkit-tap-highlight-color: transparent !important;
         outline: none !important;
     }
 
-    /* 4. HIDE THE SCROLLBAR (THE LINE ON THE RIGHT) */
-    ::-webkit-scrollbar {
-        display: none !important;
-        width: 0 !important;
+    /* 4. HIDE SCROLLBAR LINE (AERO) */
+    ::-webkit-scrollbar { display: none !important; }
+    * { scrollbar-width: none !important; }
+
+    /* 5. TITLE LOOK: One line, cuts off with "..." (To keep layout clean) */
+    .font-heading { 
+        font-family: 'Cinzel', serif; 
+        line-height: 1.2 !important;
+        white-space: nowrap !important;     
+        overflow: hidden !important;        
+        text-overflow: ellipsis !important;   
+        font-size: 20px !important;         
+        text-align: center !important;
+        display: block !important;
     }
 
-    /* 5. KEEP THE TOP GAP FIX (STOPS THE WHITE BAR) */
-    html, body { 
-        overscroll-behavior-y: none; 
-        background-color: #030e26; 
+    /* 6. YOUR ORIGINAL STYLES */
+    .font-arabic { font-family: 'Scheherazade New', serif; line-height: 2.3; }
+    .no-scrollbar::-webkit-scrollbar { display: none; }
+    .animate-in { animation: fadeIn 0.4s ease-out; }
+    @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
+</style>
+
+——————————————————
+Now this all god bu only top title cut 
+
+<style>
+    /* 1. GLOBAL FIXES: Background, Side Gaps, and No Flashing */
+    html, body {
+        width: 100%;
         margin: 0;
         padding: 0;
+        background-color: #030e26 !important;
+        overscroll-behavior: none !important; /* Stops white top gap and side bounce */
     }
 
-    body { 
-        transition: background-color 0.3s; 
-        overflow-x: hidden; 
-        padding-top: env(safe-area-inset-top); 
+    #root {
+        width: 100%;
+        position: relative;
+        /* This stops the side-to-side gap without breaking the sticky menu */
+        overflow-x: clip !important; 
     }
 
-    /* 6. ORIGINAL ANIMATIONS AND ARABIC FONT */
+    * {
+        -webkit-tap-highlight-color: transparent !important;
+        outline: none !important;
+    }
+
+    ::-webkit-scrollbar { display: none !important; width: 0 !important; }
+    * { scrollbar-width: none !important; }
+
+    /* 2. THE STICKY FIX: Forces Header & Index Menu to stay at the top */
+    /* This allows you to change Duas while scrolling down */
+    
+    header, .header-container, #root > div > div:first-child {
+        position: -webkit-sticky !important;
+        position: sticky !important;
+        top: 0 !important;
+        z-index: 2000 !important;
+        background-color: #030e26 !important;
+        padding-top: env(safe-area-inset-top) !important;
+        padding-bottom: 5px !important;
+    }
+
+    /* Target the Index Menu (The horizontal buttons: 1. Dua For, 2. Dua For...) */
+    .flex.overflow-x-auto, [class*="overflow-x-auto"], nav.flex {
+        position: -webkit-sticky !important;
+        position: sticky !important;
+        top: 60px !important; /* Sits right below the page title */
+        z-index: 1999 !important;
+        background-color: #030e26 !important;
+        padding: 10px 0 !important;
+        border-bottom: 1px solid rgba(255,255,255,0.1);
+    }
+
+    /* 3. LOGO & TITLES FIXES: No more cutting off with "..." */
+    .font-heading { 
+        font-family: 'Cinzel', serif; 
+        line-height: 1.2 !important;
+        text-align: center !important;
+    }
+
+    /* MAIN LOGO (Home Screen Only): Keeps QALB-E-DUA on one line */
+    #root > div > div:first-child .font-heading {
+        white-space: nowrap !important;
+        font-size: 22px !important;
+    }
+
+    /* INTERNAL PAGE TITLES: ALLOWS wrapping so they are NEVER cut off */
+    header .font-heading, .title-container .font-heading {
+        white-space: normal !important;   /* Fixes the "..." cut off */
+        overflow: visible !important;
+        text-overflow: unset !important;
+        font-size: 18px !important;
+        max-width: 80% !important;
+        margin: 0 auto !important;
+        display: block !important;
+    }
+
+    /* 4. ORIGINAL STYLES */
     .font-arabic { font-family: 'Scheherazade New', serif; line-height: 2.3; }
     .no-scrollbar::-webkit-scrollbar { display: none; }
     .animate-in { animation: fadeIn 0.4s ease-out; }
