--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,139 +18,65 @@
     <script src="https://cdn.tailwindcss.com"></script>
     
     <link href="https://fonts.googleapis.com/css2?family=Amiri&family=Cinzel:wght@400;700&family=Scheherazade+New:wght@400;700&display=swap" rel="stylesheet">
-<style>
-    /* 1. FIX THE OVERLAP WITH THE CLOCK */
-    /* This ensures headers never touch the iPhone status bar icons */
-    header, .header-container, #root > div > div:first-child {
-        padding-top: env(safe-area-inset-top) !important;
-        min-height: calc(60px + env(safe-area-inset-top)) !important;
-        display: flex !important;
-        flex-direction: column !important;
-        justify-content: center !important;
-    }
-
-    /* 2. FIX THE TITLES (LOGO VS INTERNAL PAGES) */
-    .font-heading { 
-        font-family: 'Cinzel', serif; 
-        line-height: 1.2 !important;
-    }
-
-    /* Target ONLY the main "QALB-E-DUA" logo to stay on one line */
-    #root > div > div:first-child .font-heading {
-        white-space: nowrap !important;
-        font-size: 22px !important;
-    }
-
-    /* ALLOW other page titles like "PRAYERS OF THE PROPHET" to wrap naturally */
-    /* This stops the "..." cut off problem in your picture */
-    header .font-heading, .title-container .font-heading {
-        white-space: normal !important;
-        font-size: 1.2rem !important;
-        width: 90% !important;
-        margin: 0 auto !important;
-    }
-
-    /* 3. STOP THE BLUE FLASHING WHEN PRESSING BUTTONS */
-    * {
-        -webkit-tap-highlight-color: transparent !important;
-        outline: none !important;
-    }
-
-    /* 4. HIDE SCROLLBAR & STOP WHITE GAP */
-    ::-webkit-scrollbar { display: none !important; }
-    html, body { 
-        overscroll-behavior-y: none; 
-        background-color: #030e26 !important; 
-        scrollbar-width: none !important;
-        margin: 0;
-        padding: 0;
-    }
-
-    /* 5. YOUR ORIGINAL STYLES */
-    .font-arabic { font-family: 'Scheherazade New', serif; line-height: 2.3; }
-    .no-scrollbar::-webkit-scrollbar { display: none; }
-    .animate-in { animation: fadeIn 0.4s ease-out; }
-    @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
-</style>
-
-
-——————————————————
-Now this all god bu only top title cut 
 
 <style>
-    /* 1. GLOBAL FIXES: Background, Side Gaps, and No Flashing */
+    /* 1. LOCK SCREEN & BACKGROUND: No white gap, no side gap */
     html, body {
         width: 100%;
         margin: 0;
         padding: 0;
+        overscroll-behavior-y: none !important; 
         background-color: #030e26 !important;
-        overscroll-behavior: none !important; /* Stops white top gap and side bounce */
+        /* We remove 'overflow: hidden' here so 'sticky' actually works */
     }
 
-    #root {
-        width: 100%;
-        position: relative;
-        /* This stops the side-to-side gap without breaking the sticky menu */
-        overflow-x: clip !important; 
-    }
-
-    * {
-        -webkit-tap-highlight-color: transparent !important;
-        outline: none !important;
-    }
-
-    ::-webkit-scrollbar { display: none !important; width: 0 !important; }
-    * { scrollbar-width: none !important; }
-
-    /* 2. THE STICKY FIX: Forces Header & Index Menu to stay at the top */
-    /* This allows you to change Duas while scrolling down */
-    
+    /* 2. STICKY HEADER & INDEX: This keeps them at the top when you scroll */
     header, .header-container, #root > div > div:first-child {
         position: -webkit-sticky !important;
         position: sticky !important;
         top: 0 !important;
-        z-index: 2000 !important;
+        z-index: 1000 !important;
         background-color: #030e26 !important;
         padding-top: env(safe-area-inset-top) !important;
         padding-bottom: 5px !important;
     }
 
-    /* Target the Index Menu (The horizontal buttons: 1. Dua For, 2. Dua For...) */
-    .flex.overflow-x-auto, [class*="overflow-x-auto"], nav.flex {
+    /* THIS IS THE INDEX FIX: It makes the buttons stay at the top 
+       so you can see them the moment you scroll back up */
+    .flex.overflow-x-auto, nav.flex, [class*="overflow-x-auto"] {
         position: -webkit-sticky !important;
         position: sticky !important;
-        top: 60px !important; /* Sits right below the page title */
-        z-index: 1999 !important;
+        top: 60px !important; /* Adjust this if your title is taller */
+        z-index: 999 !important;
         background-color: #030e26 !important;
-        padding: 10px 0 !important;
+        padding-top: 10px !important;
+        padding-bottom: 10px !important;
         border-bottom: 1px solid rgba(255,255,255,0.1);
     }
 
-    /* 3. LOGO & TITLES FIXES: No more cutting off with "..." */
+    /* 3. STOP BLUE FLASHING ON BUTTONS */
+    * {
+        -webkit-tap-highlight-color: transparent !important;
+        outline: none !important;
+    }
+
+    /* 4. HIDE SCROLLBAR LINE (AERO) */
+    ::-webkit-scrollbar { display: none !important; }
+    * { scrollbar-width: none !important; }
+
+    /* 5. TITLE LOOK: One line, cuts off with "..." (To keep layout clean) */
     .font-heading { 
         font-family: 'Cinzel', serif; 
         line-height: 1.2 !important;
+        white-space: nowrap !important;     
+        overflow: hidden !important;        
+        text-overflow: ellipsis !important;   
+        font-size: 20px !important;         
         text-align: center !important;
-    }
-
-    /* MAIN LOGO (Home Screen Only): Keeps QALB-E-DUA on one line */
-    #root > div > div:first-child .font-heading {
-        white-space: nowrap !important;
-        font-size: 22px !important;
-    }
-
-    /* INTERNAL PAGE TITLES: ALLOWS wrapping so they are NEVER cut off */
-    header .font-heading, .title-container .font-heading {
-        white-space: normal !important;   /* Fixes the "..." cut off */
-        overflow: visible !important;
-        text-overflow: unset !important;
-        font-size: 18px !important;
-        max-width: 80% !important;
-        margin: 0 auto !important;
         display: block !important;
     }
 
-    /* 4. ORIGINAL STYLES */
+    /* 6. YOUR ORIGINAL STYLES */
     .font-arabic { font-family: 'Scheherazade New', serif; line-height: 2.3; }
     .no-scrollbar::-webkit-scrollbar { display: none; }
     .animate-in { animation: fadeIn 0.4s ease-out; }
