--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
         font-size: 22px !important;
     }
 
-    /* ALLOW other page titles like "PRAYERS OF THE PROPHET" to wrap naturally */
+   /* ALLOW other page titles like "PRAYERS OF THE PROPHET" to wrap naturally */
     /* This stops the "..." cut off problem in your picture */
     header .font-heading, .title-container .font-heading {
         white-space: normal !important;
         font-size: 1.2rem !important;
-        width: 90% !important;
+        width: auto !important;   <-- MODIFIED HERE
         margin: 0 auto !important;
     }
 
